# electra_stacking

./: .gitignore  Cargo.toml  LICENSE  README.md  build-release.bat  build.rs
docs/: _config.yml  index.md
docs/assets/: main.scss
macros/: Cargo.toml
po/: ru.po
src/: calc.rs  cameras_database.rs  cmd_cleanup.rs  cmd_convert.rs  cmd_create_master_dark.rs  cmd_create_master_flat.rs  cmd_register.rs  cmd_stack_lights.rs  compression.rs  config.rs  fs_utils.rs  gtk_utils.rs  gui.rs  image.rs  image_formats.rs  image_io.rs  image_norm.rs  image_raw.rs  lib.rs  light_file.rs  log_utils.rs  main.rs  progress.rs  project.rs  stacking_utils.rs  stars.rs  tests.rs  ui_about_dialog.rs  ui_assign_ref_frame_dialog.rs  ui_cleanup_dialog.rs  ui_dnd_files_type_dialog.rs  ui_group_options_dialog.rs  ui_main.rs  ui_move_file_to_group_dialog.rs  ui_prj_columns.rs  ui_prj_columns_dialog.rs  ui_project_options_dialog.rs  ui_select_group_dialog.rs
src/ui/: #group_options_dialog.ui#  about_dialog.ui  assign_ref_light_frame.ui  cleanup_dialog.ui  columns_selector.ui  dnd_files_type_dialog.ui  group_options_dialog.ui  main_window.ui  move_files_to_group_dialog.ui  project_options_dialog.ui  select_group_dialog.ui
win_resources/: resource.rc
win_stuff/: installer.nsi  resource.rc
