[package]
name = "electra_stacking"
version = "0.1.62"
edition = "2021"
description = "Astronimical images stacking"
repository = "https://github.com/art-den/electra_stacking"
license = "MIT"
build = "build.rs"

[dependencies]
fitrs = "0.5.0"
itertools = "0.10.3"
num = "0.4.0"
structopt = "0.3.26"
#rawloader = "0.37.0"
rawloader = { git = "https://github.com/art-den/rawloader" }
anyhow = "1.0.57"
tiff = "0.7.1"
leb128 = "0.2.5"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
byteorder = "1.4.3"
bitflags = "1.3.2"
log = "0.4.14"
flexi_logger = "0.22.3"
rayon = "1.5"
bitstream-io = "1.3"
gtk = "0.15"
uuid = { version = "1", features = [ "v4" ] }
dirs = "4.0"
chrono = { version = "0.4", features = [ "serde" ] }
num_cpus = "1.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
overflow-checks = false

[profile.profiling]
inherits = "release"
debug = true
opt-level = 3
lto = false
strip = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
