[package]
name = "electra_stacking"
version = "0.1.114"
edition = "2021"
description = "Astronimical images stacking"
repository = "https://github.com/art-den/electra_stacking"
license = "MIT"
build = "build.rs"

[dependencies]
itertools = "0.12"
num = "0.4"
rawloader = { git = "https://github.com/art-den/rawloader" }
anyhow = "1.0"
tiff = "0.7"
leb128 = "0.2"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
delaunator = "1.0" # for triangulation
bitflags = "1.3"
log = "0.4"
flexi_logger = "0"
rayon = "1.5"
bitstream-io = "1.5"
async-channel = "2.0"
gtk = "0.18.1"
uuid = { version = "1", features = [ "v4" ] }
dirs = "4.0"
chrono = { version = "0.4", features = [ "serde" ] }
num_cpus = "1.13"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
nalgebra = "0.31"
fitsio = "0.20"
path-absolutize = "3.0"
pathdiff = "0.2"
rand = "0.8" # for compressor tests

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 1
overflow-checks = false

[profile.profiling]
inherits = "release"
debug = true
opt-level = 3
lto = false
strip = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 0